--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -20,8 +20,9 @@
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-tabs": "^1.1.12",
-    "@react-router/node": "^7.7.1",
-    "@react-router/serve": "^7.7.1",
+    "@react-router/fs-routes": "^7.8.2",
+    "@react-router/node": "^7.8.2",
+    "@react-router/serve": "^7.8.2",
     "@types/prismjs": "^1.26.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -33,14 +34,14 @@
     "prismjs": "^1.30.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router": "^7.7.1",
+    "react-router": "^7.8.2",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^4.1.0",
     "@eslint/js": "^9.33.0",
-    "@react-router/dev": "^7.7.1",
+    "@react-router/dev": "^7.8.2",
     "@storybook/addon-docs": "^9.1.0",
     "@storybook/addon-onboarding": "^9.1.0",
     "@storybook/react": "^9.1.0",
