--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -16,9 +16,12 @@
     "check-translations": "node scripts/check-translations.js"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.12",
     "@react-router/fs-routes": "^7.8.2",
     "@react-router/node": "^7.8.2",
@@ -34,9 +37,11 @@
     "prismjs": "^1.30.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hook-form": "^7.63.0",
     "react-router": "^7.8.2",
     "sonner": "^2.0.7",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "zod": "^4.1.9"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^4.1.0",
@@ -60,6 +65,7 @@
     "prettier-plugin-tailwindcss": "^0.6.14",
     "storybook": "^9.1.0",
     "tailwindcss": "^4.1.4",
+    "tw-animate-css": "^1.3.8",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.39.0",
     "vite": "^6.3.3",
